# docs/swagger.json
@@ -27,6 +27,12 @@
                         "schema": {
                             "$ref": "#/definitions/events.GetEventsResponse"
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httpErrors.HttpError"
+                        }
                     }
                 }
             },
@@ -59,6 +65,58 @@
                         "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/httpErrors.HttpError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httpErrors.HttpError"
+                        }
+                    }
+                }
+            }
+        },
+        "/events/categories/{category}": {
+            "get": {
+                "description": "Возвращает события по категории",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "events"
+                ],
+                "summary": "Получение событий по категори",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/events.GetEventsResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/httpErrors.HttpError"
+                        }
+                    }
+                }
+            }
+        },
+        "/events/tags/{tag}": {
+            "get": {
+                "description": "Возвращает события по тегу",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "events"
+                ],
+                "summary": "Получение событий по тегу",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/events.GetEventsResponse"
                         }
                     },
                     "500": {
@@ -181,32 +239,6 @@
                         "description": "Event Not Found",
                         "schema": {
                             "$ref": "#/definitions/httpErrors.HttpError"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/httpErrors.HttpError"
-                        }
-                    }
-                }
-            }
-        },
-        "/events/{tag}": {
-            "get": {
-                "description": "Возвращает события по тегу",
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "events"
-                ],
-                "summary": "Получение событий по тегу",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/events.GetEventsResponse"
                         }
                     },
                     "500": {
@@ -416,17 +448,26 @@
                 "author": {
                     "type": "integer"
                 },
-                "date_end": {
-                    "type": "string"
+                "capacity": {
+                    "type": "integer"
                 },
-                "date_start": {
+                "category": {
                     "type": "string"
                 },
                 "description": {
                     "type": "string"
                 },
+                "event_end": {
+                    "type": "string"
+                },
+                "event_start": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "integer"
+                },
+                "location": {
+                    "type": "string"
                 },
                 "tag": {
                     "type": "array",
